--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="{{ path('team.index') }}"><i class="fas fa-user-friends">&nbsp;</i>Equipes de Villepreux</a>
                             <a class="dropdown-item" href="{{ path('interclub.index') }}"><i class="fas fa-retweet">&nbsp;</i>Toutes les Rencontres</a>
-                            <a class="dropdown-item" href="{{ path('myinterclubs') }}"><i class="fas fa-retweet">&nbsp;</i>Gérer mes interclubs</a>
+                            <a class="dropdown-item" href="{{ path('myinterclubs') }}"><i class="fas fa-box-open">&nbsp;</i>Gérer mes interclubs</a>
                             <a class="dropdown-item" href="{{ path('interclubVeteran.index') }}"><i class="fab fa-android">&nbsp;</i>Interclubs Vétéran</a>
                         </div>
                     </li>
