--- a/templates/interclub/edit_masculin.html.twig
+++ b/templates/interclub/edit_masculin.html.twig
@@ -3,8 +3,17 @@
 {% block title 'Modifier une rencontre' %}
 
 {% block body %}
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success">
+        {{ message }}
+    </div>
+{% endfor %}
 <div class="container mt-4">
-    <a class="btn btn-primary" href="{{ path('interclub.index')}}"><i class="fas fa-list-alt">&nbsp;</i>Liste des rencontres</a>
+    <a class="btn btn-primary" href="{{ path('interclub.index')}}"><i class="fas fa-list-alt">&nbsp;</i>Retour Liste</a>
+    {% if is_granted('ROLE_ADMIN') %}
+    <a class="btn btn-info" href="{{ path('compo', {'interclubId': interclub.id})}}"><i class="fas fa-users">&nbsp;</i>Faire la composition</a>
+    <a class="btn btn-info" href="{{ path('myinterclubs_edit', {'interclubId': interclub.id})}}"><i class="fas fa-box-open">&nbsp;</i>Gérer les présences</a>
+    {% endif %}
 </div>
 <div class="container mt-4">
     {{ form_start(interclubForm) }}
@@ -32,28 +41,19 @@
         </div>
         <div class="col-md-auto">{{ form_row(interclubForm.saison) }}</div>
     </div>
-    <h3>Composition de l'équipe</h3>
     <div class="row">
-        <div class="col-md-auto">{{ form_row(interclubForm.SH1) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.SH2) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.SH3) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.SH4) }}</div>
-    </div>
-    <div class="row">
-        <div class="col-md-auto">{{ form_row(interclubForm.DH1Joueur1) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.DH1Joueur2) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.DH2Joueur1) }}</div>
-        <div class="col-md-auto">{{ form_row(interclubForm.DH2Joueur2) }}</div>
-    </div>
-    <div class="row">
-            <div class="col-md-auto">
-                <button class="btn btn-primary"><i class="far fa-save">&nbsp;</i>{{ button|default('Sauvegarder les modifications') }}</button>
-            </div>
+        <div class="col-md-auto">
+            {{ form_row(interclubForm.save) }}
+        </div>
+        <div class="col-md-auto">
+            {{ form_widget(interclubForm.saveAndQuit) }}
+        </div>
     {{ form_end(interclubForm) }}
             <div class="col-md-auto">
                     {{ include('interclub/_delete_form.html.twig') }}
             </div>
         </div>
+    </div>
     <div class="tab">&nbsp;</div>
 </div>
 {% endblock %}
