--- a/templates/reponse/index.html.twig
+++ b/templates/reponse/index.html.twig
@@ -1,20 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ReponseController!{% endblock %}
+{% block title %}BACV - Résultats{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/vo2group/Documents/Personnel/BACV78/symfony/bacv/src/Controller/ReponseController.php'|file_link(0) }}">src/Controller/ReponseController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/vo2group/Documents/Personnel/BACV78/symfony/bacv/templates/reponse/index.html.twig'|file_link(0) }}">templates/reponse/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% for sondage in sondages %}
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">{{ sondage.title }}</h5>
+            <p class="card-text">{{ sondage.description }}</p>
+            <a href="{{ path('reponse.view', {id: sondage.id}) }}" class="btn btn-primary">Voir les résultats</a>
+        </div>
+    </div>
+{% else %}
+    Pas encore de sondages disponibles
+{% endfor %}
 {% endblock %}
